ICatalogService Interface and related classes added

--- a/Client/Ticket.Web/Views/Shared/_Layout.cshtml
+++ b/Client/Ticket.Web/Views/Shared/_Layout.cshtml
@@ -210,7 +210,8 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
-	<script src="~/commonScripts/common-scripts.js"></script>
+
+	<script src="/commonScripts/common-scripts.js"></script>
 
 
 
