--- a/Client/Ticket.Web/Views/User/Index.cshtml
+++ b/Client/Ticket.Web/Views/User/Index.cshtml
@@ -885,13 +885,15 @@
 	</footer>
 	<!-- Footer End-->
 
+	<script src="/commonScripts/common-scripts.js"></script>
 
-	<script src="~/~/js/jquery-3.6.0.min.js"></script>
+
+@*	<script src="~/~/js/jquery-3.6.0.min.js"></script>
 	<script src="~/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 	<script src="~/vendor/OwlCarousel/owl.carousel.js"></script>
 	<script src="~/vendor/bootstrap-select/dist/js/bootstrap-select.min.js"></script>
 	<script src="~/js/custom.js"></script>
-	<script src="~/js/night-mode.js"></script>
+	<script src="~/js/night-mode.js"></script>*@
 </body>
 
 <!-- Mirrored from www.gambolthemes.net/html-items/barren-html/disable-demo-link/organiser_profile_view.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 12 Jul 2023 19:02:08 GMT -->
