--- a/Client/Ticket.Web/Views/_ViewImports.cshtml
+++ b/Client/Ticket.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using Ticket.Web
 @using Ticket.Web.Models
+@using Ticket.Web.Models.Catalog;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
