--- a/Client/Ticket.Web/Views/User/Index.cshtml
+++ b/Client/Ticket.Web/Views/User/Index.cshtml
@@ -370,8 +370,9 @@
 											<a class="nav-link" id="setting-tab" data-bs-toggle="tab" href="#setting" role="tab" aria-controls="setting" aria-selected="false"><i class="fa-solid fa-gear"></i>Setting</a>
 										</li>
 										<li class="nav-item">
-											<a class="nav-link" asp-asp-controller="Events" asp-action="Index" id="orders-tab" data-bs-toggle="tab" role="tab" aria-controls="orders" aria-selected="false"><i class="fa-solid fa-box"></i>My Orders</a>
-										</li>
+											<a asp-controller="Events" asp-action="Index" class="list-group-item list-group-item-action">My Orders</a>
+@*											<a class="nav-link" asp-controller="Events" asp-action="Index" id="orders-tab"  aria-controls="orders" ><i class="fa-solid fa-box"></i>My Orders</a>
+*@										</li>
 									</ul>
 									<div class="tab-content" id="myTabContent">
 										<div class="tab-pane fade active show" id="feed" role="tabpanel" aria-labelledby="feed-tab">
@@ -764,76 +765,7 @@
 	</div>
 	<!-- Body End-->
 	<!-- Footer Start-->
-	<footer class="footer mt-auto">
-		<div class="footer-top">
-			<div class="container">
-				<div class="row">
-					<div class="col-lg-3 col-md-6">
-						<div class="footer-content">
-							<h4>Company</h4>
-							<ul class="footer-link-list">
-								<li><a href="about_us.html" class="footer-link">About Us</a></li>
-								<li><a href="help_center.html" class="footer-link">Help Center</a></li>
-								<li><a href="faq.html" class="footer-link">FAQ</a></li>
-								<li><a href="contact_us.html" class="footer-link">Contact Us</a></li>
-							</ul>
-						</div>
-					</div>
-					<div class="col-lg-3 col-md-6">
-						<div class="footer-content">
-							<h4>Useful Links</h4>
-							<ul class="footer-link-list">
-								<li><a href="create.html" class="footer-link">Create Event</a></li>
-								<li><a href="sell_tickets_online.html" class="footer-link">Sell Tickets Online</a></li>
-								<li><a href="privacy_policy.html" class="footer-link">Privacy Policy</a></li>
-								<li><a href="term_and_conditions.html" class="footer-link">Terms & Conditions</a></li>
-							</ul>
-						</div>
-					</div>
-					<div class="col-lg-3 col-md-6">
-						<div class="footer-content">
-							<h4>Resources</h4>
-							<ul class="footer-link-list">
-								<li><a href="pricing.html" class="footer-link">Pricing</a></li>
-								<li><a href="our_blog.html" class="footer-link">Blog</a></li>
-								<li><a href="refer_a_friend.html" class="footer-link">Refer a Friend</a></li>
-							</ul>
-						</div>
-					</div>
-					<div class="col-lg-3 col-md-6">
-						<div class="footer-content">
-							<h4>Follow Us</h4>
-							<ul class="social-links">
-								<li><a href="#" class="social-link"><i class="fab fa-facebook-square"></i></a>
-								<li><a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
-								<li><a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
-								<li><a href="#" class="social-link"><i class="fab fa-linkedin-in"></i></a>
-								<li><a href="#" class="social-link"><i class="fab fa-youtube"></i></a>
-							</ul>
-						</div>
-						<div class="footer-content">
-							<h4>Download Mobile App</h4>
-							<div class="download-app-link">
-								<a href="#" class="download-btn"><img src="~/images/app-store.png" alt=""></a>
-								<a href="#" class="download-btn"><img src="~/images/google-play.png" alt=""></a>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="footer-bottom">
-			<div class="container">
-				<div class="row">
-					<div class="col-12">
-						<div class="footer-copyright-text">
-							<p class="mb-0">© 2022, <strong>Barren</strong>. All rights reserved. Powered by Gambolthemes</p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</footer>
+	
 	<!-- Footer End-->
 
 	<script src="/commonScripts/common-scripts.js"></script>
